Prevent small screen overflow on Firefox

--- a/assets/css/fosskers.scss
+++ b/assets/css/fosskers.scss
@@ -224,6 +224,7 @@ $panel-heading-background-color: $grey-dark;
   .grid-main {
     margin-left: 1%;
     margin-right: 1%;
+    width: 95%;
   }
 
   .mobile-hidden {
